<resources>
    <string name="app_name">Our Kitchen</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters, include a digit, one uppercase character, and 1 special character</string>
    <string name="invalid_firstName">First name must be >3 characters</string>
    <string name="invalid_lastName">Last name must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="added">added</string>
    <string name="update">Update</string>
    <string name="modified">modified</string>
    <string name="removed">removed</string>
    <string name="logout">Logout</string>
    <string name="remove_account">Remove Account</string>
    <string name="settings">Settings</string>
    <string name="update_password">Update Password</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="post_not_liked">NOT_LIKED</string>
    <string name="post_liked">LIKED</string>
    <string name="newsfeed_tag">fragment_newsfeed</string>
    <string name="saved_tag">fragment_saved</string>
    <string name="no_matching_results">Sorry there are no results matching your search.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Preferences -->
    <string name="use_strong_password">Please use a strong password!</string>
    <string name="sure_remove_account">Are you sure you want to remove account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="account_delete_success">Your account has been deleted!</string>
    <string name="account_delete_fail">Your account has been deleted!</string>
    <string name="reset_pass_mail_sent_success">Password reset email has been sent</string>
    <string name="reset_pass_mail_sent_fail">Failed to send reset password email</string>
    <string name="old_password_empty">Old Password is Empty!</string>
    <string name="password_update_success">Successfully updated password</string>
    <string name="password_update_fail">Failed to update password</string>
    <string name="password_mismatch">Passwords do not match</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>

    <string name="attachment_summary_on">
        Automatically download attachments for incoming emails
    </string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cellular_pref_key">cellularOn</string>
    <string name="cellular_summary_off">Only upload posts when connected to WiFi.</string>
    <string name="cellular_summary_on">Uploads post when connected to cellular or WiFi.</string>
    <string name="cellular_title">Upload media using cellular</string>
    <string name="friend_card_interests_label">Interests:</string>
    <string name="friend_card_friendship_label">Friendship:</string>
    <string name="friend_card_profile_label">Profile:</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="not_friends">Not cooking together yet!</string>
    <string name="friends">Cooking together!</string>
    <string name="private_profile">Private</string>
    <string name="public_profile">Public</string>
    <string name="your_profile_friendstxt">Your profile</string>
    <string name="pending_request_txt">Pending Request</string>
    <string name="request_sent_txt">Request Sent</string>
    <string name="you_have_no_matching_saved_posts_txt">You have no matching saved posts.</string>
    <string name="comment_btn">Comment</string>
    <string name="delete_btn">delete_btn</string>
    <string name="like_btn">like_btn</string>
    <string name="link_icon_img">link_icon</string>
    <string name="missing_user_name">No User</string>
    <string name="posters_profile_image">posters profile image</string>
    <string name="link_icon_image">link icon image</string>
    <string name="post_image">post image</string>
    <string name="friend_profile_image">friend profile image</string>
    <string name="more_options_button">more options button</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="search">Search</string>
    <string name="via_name">via name</string>
    <string name="via_interests">via interests</string>
    <string name="find_friends_search_button">find friends search button</string>
    <string name="filter_button">filter button</string>
    <string name="no_posts_to_show_newsfeed">No posts to show!</string>
    <string name="create_post_button">create post</string>
    <string name="filter_txt">Filter</string>
    <string name="no_comments_yet">No comments yet.</string>
    <string name="enter_comment">Enter comment</string>
    <string name="post_button">Post</string>
    <string name="you_currently_have_no_saved_posts">You currently have no saved posts.</string>
    <string name="search_our_kitchen">Search Our Kitchen</string>
    <string name="search_google">Search Google</string>
    <string name="friend">Friend</string>
    <string name="add_friend">add friend</string>
    <string name="first">first</string>
    <string name="last">last</string>
    <string name="user_profile_image">user profile image</string>
    <string name="user_email_holder">useremail@email.com</string>
    <string name="no_posts_to_show_show_profile">No posts to show!</string>
    <string name="user_is_private">This user\'s posts are private</string>
    <string name="email_icon">email icon</string>
    <string name="privacy_description_rego">The app allows a user to have a public or a private profile. Public means all users will be able to see your posts, private will only allow your co-chefs to see them.</string>
    <string name="no_pending_requests">No pending requests</string>
    <string name="comments_icon">comments icon</string>
    <string name="connecting_people">Connecting people through recipes</string>
    <string name="no_account_message">Don\'t have an account?</string>
    <string name="register_now">register now</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="user_name_and_time">[First Last] @ Time</string>
    <string name="comment_placeholder">[Comment]</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="review_a_recipe">Review a recipe</string>
    <string name="post">Post</string>
    <string name="your_rating">Your Rating</string>
    <string name="any_modifications">Any modifications?</string>
    <string name="tell_about_recipe">Tell us about this recipe…</string>
    <string name="add_hashtags">Add hashtags, e.g. #french</string>
    <string name="select_photo">Select photo</string>
    <string name="take_photo">Take photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_details">Save Details</string>
    <string name="interests">Interests</string>
    <string name="new_interest">New interest</string>
    <string name="save_interests">Save interests</string>
    <string name="messages">Messages</string>
    <string name="enter_message">Enter Messages</string>
    <string name="send">Send</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email_example">useremail@email.com</string>
    <string name="no_interests">No interests</string>
    <string name="chefs">Chefs</string>
    <string name="view_pending">view pending</string>
    <string name="no_posts_yet">You have no posts yet!</string>
    <string name="privacy">Privacy</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_example_2">email@organisation.com</string>
    <string name="interests_example">one, two, three</string>
    <string name="edit_profile_friends">Friends</string>
    <string name="enter_basic_info">Please enter some basic information to get you setup with an account</string>
    <string name="next">Next</string>
    <string name="register_interests">Select some interests or add your own to better help you find like-minded cooks!</string>
    <string name="french_interest">french</string>
    <string name="chinese_interest">chinese</string>
    <string name="italian_interest">italian</string>
    <string name="thai_interest">thai</string>
    <string name="register">Register</string>
    <string name="username">user name</string>
    <string name="accept">accept</string>
    <string name="deny">deny</string>
    <string name="no_name">No name</string>
    <string name="unfriend">Unfriend</string>
    <string name="friend_name">Friend Name</string>
    <string name="message_placeholder">[Message]</string>
    <string name="take_new">take new</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="find_friends">Find Friends</string>
    <string name="chat_search">Chat Search</string>
    <string name="enter_a_search_term">Enter a search term!</string>
    <string name="cancel_post">Cancel Post</string>
    <string name="create_post_leave_confirmation_message">Are you sure you want to leave this page, all changes will be lost?</string>
    <string name="share_post">Share Post</string>
    <string name="ready_to_post">Ready to post?</string>
    <string name="post_offline_message">Warning: currently offline, will post when connected!</string>
    <string name="post_will_upload_when_wifi">Will upload when connected to Wifi!</string>
    <string name="loading">Loading</string>
    <string name="posting_now">Posting now!</string>
    <string name="login_failure_toast_message">Login failure, please try again</string>
    <string name="login_success_toast_message">Welcome back to our kitchen!</string>
    <string name="cancel_post_confirmation">Are you sure you want to leave this page, all changes will be lost?</string>
    <string name="unsave_post">Unsave Post</string>
    <string name="unsave_post_confirmation_message">Do you want to unsave this post?</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_confirmation_message">Do you want to permanently delete this post?</string>
    <string name="delete_friend_confirmation">Are you sure you want to delete %1$s ?</string>
    <string name="unfriend_username">Unfriend %1$s</string>
    <string name="registration_success_toast">Welcome to our kitchen!</string>
    <string name="upload_post_success_toast">Uploaded, check your profile!</string>
    <string name="post_uploaded">Post Uploaded!</string>
</resources>