<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newsfeed"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/newsfeed" />

    <item
        android:id="@+id/saved"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_thumb_up_24"
        android:title="@string/saved" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_bubble_24"
        android:title="@string/chat" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>
