<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_friends_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context=".ui.findfriends.FindFriends">

    <EditText
        android:id="@+id/search_friends_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/search"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/search_by_name_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_name" />

            <RadioButton
                android:id="@+id/search_by_interests_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/via_interests" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/search_friends_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/find_friends_search_button"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@color/primaryColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_matching_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_matching_results"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paging_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/browser_actions_bg_grey"
        android:visibility="visible"
        tools:listitem="@layout/friend_card_recycler" />
</LinearLayout>