<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:background="@color/white"
    android:clipToPadding="false"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/posters_image_card"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posters_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/posters_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/posters_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/missing_user_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/posters_image_card"
        app:layout_constraintStart_toEndOf="@id/posters_image_card" />

    <ImageView
        android:id="@+id/like_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/like_btn"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:tag="@string/post_not_liked"
        app:layout_constraintBottom_toBottomOf="@id/posters_image_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primaryColor" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/delete_btn"
        android:src="@drawable/ic_baseline_delete_outline_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like_image"
        app:tint="@color/light_gray" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posters_image_card" />

    <TextView
        android:id="@+id/postHashTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:textColor="@color/primaryColor"
        android:textColorLink="@color/hashTagColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <ImageView
        android:id="@+id/link_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/link_icon_image"
        android:src="@drawable/ic_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postHashTags" />

    <TextView
        android:id="@+id/hyperlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/link_icon"
        app:layout_constraintTop_toTopOf="@id/link_icon" />

    <ImageView
        android:id="@+id/mods_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/link_icon_img"
        android:src="@drawable/ic_baseline_change_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hyperlink" />

    <TextView
        android:id="@+id/modifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mods_icon"
        app:layout_constraintTop_toTopOf="@id/mods_icon" />

    <ImageView
        android:id="@+id/comments_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@string/comments_icon"
        android:src="@drawable/ic_baseline_text_snippet_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifications"/>

    <TextView
        android:id="@+id/comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/comments_icon"
        app:layout_constraintTop_toBottomOf="@id/modifications" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-10dp"
        android:contentDescription="@string/post_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comments"/>

    <Button
        android:id="@+id/comment_action"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginHorizontal="8dp"
        android:drawableStart="@drawable/ic_baseline_chat_bubble_24"
        android:text="@string/comment_btn"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage" />
</androidx.constraintlayout.widget.ConstraintLayout>
