<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/request_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_picture_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_24" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/request_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@id/deny_request_btn"
        app:layout_constraintStart_toEndOf="@id/image_card"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/accept_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toStartOf="@id/deny_request_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deny_request_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>