<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.Settings">

    <EditText
        android:id="@+id/oldPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
</FrameLayout>
